--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="light">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -77,6 +77,7 @@
                                 </ul>
                             </div>
                         </div>
+                        <!--nav sum-->
                         <nav class="nav d-none d-lg-flex main-nav justify-content-lg-end" id="mainNav">
                             <a href="#" class="nav-link main-nav-link text-uppercase">about</a>
                             <a href="#" class="nav-link main-nav-link text-uppercase">events</a>
@@ -111,7 +112,103 @@
         </section>
     </header>
     <!-- main -->
-    <main class="main" id="main"></main>
+    <main class="main" id="main">
+        <section class="section" id="carouselSection">
+            <div class="container">
+                <!--carousel-->
+                <div class="carousel slide" id="myCarousel">
+                    <div class="carousel-indicators">
+                        <button
+                            type="button"
+                            data-bs-target="#myCarousel"
+                            data-bs-slide-to="0"
+                            class="active"
+                            aria-current="true"
+                            aria-label="slide 1">
+                        </button>
+                        <button
+                            type="button"
+                            data-bs-target="#myCarousel"
+                            data-bs-slide-to="0"
+                            aria-label="slide 1">
+                        </button>
+                        <button
+                            type="button"
+                            data-bs-target="#myCarousel"
+                            data-bs-slide-to="1"
+                            aria-label="slide 2">
+                        </button>
+                        <button
+                            type="button"
+                            data-bs-target="#myCarousel"
+                            data-bs-slide-to="2"
+                            aria-label="slide 3">
+                        </button>
+                        <button
+                            type="button"
+                            data-bs-target="#myCarousel"
+                            data-bs-slide-to="3"
+                            aria-label="slide 4">
+                        </button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="https://via.placeholder.com/50x50"alt="placeholder img" class="img-fluid image d-block w-100" />
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://via.placeholder.com/50x50"alt="placeholder img" class="img-fluid image d-block w-100" />
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://via.placeholder.com/50x50"alt="placeholder img" class="img-fluid image d-block w-100" />
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://via.placeholder.com/50x50"alt="placeholder img" class="img-fluid image d-block w-100" />
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://via.placeholder.com/50x50"alt="placeholder img" class="img-fluid image d-block w-100" />
+                        </div>
+                    </div>
+                    <button
+                        class="carousel-control-prev"
+                        type="button"
+                        data-bs-target="#myCarousel"
+                        data-bs-slide-to="prev"
+                    >
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button
+                        class="carousel-control-next"
+                        type="button"
+                        data-bs-target="#myCarousel"
+                        data-bs-slide-to="next"
+                    >
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                </div>
+            </div>
+        </section>
+        <section class="section" id="figureSection">
+            <div class="container">
+                <div class="col-md-4">
+                    <div class="row">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima soluta at repudiandae tempora accusantium sunt deleniti fugiat ipsum, esse necessitatibus consectetur ipsa assumenda illo. Quam maiores cum vitae voluptatibus ex tempore repellat quae nam! Voluptate officia praesentium qui impedit ullam cum sint.</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="row">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima soluta at repudiandae tempora accusantium sunt deleniti fugiat ipsum, esse necessitatibus consectetur ipsa assumenda illo. Quam maiores cum vitae voluptatibus ex tempore repellat quae nam! Voluptate officia praesentium qui impedit ullam cum sint.</p>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="row">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima soluta at repudiandae tempora accusantium sunt deleniti fugiat ipsum, esse necessitatibus consectetur ipsa assumenda illo. Quam maiores cum vitae voluptatibus ex tempore repellat quae nam! Voluptate officia praesentium qui impedit ullam cum sint.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <!-- footer -->
     <footer class="footer" id="footer"></footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
