--- a/index.html
+++ b/index.html
@@ -191,26 +191,125 @@
         </section>
         <section class="section" id="figureSection">
             <div class="container">
-                <div class="col-md-4">
-                    <div class="row">
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima soluta at repudiandae tempora accusantium sunt deleniti fugiat ipsum, esse necessitatibus consectetur ipsa assumenda illo. Quam maiores cum vitae voluptatibus ex tempore repellat quae nam! Voluptate officia praesentium qui impedit ullam cum sint.</p>
+                <div class="row">
+                    <div class="col-md-4">
+                        <figure class="figure">
+                            <img src="images/img1.jpg" alt=" A neon sign reading 'Open 24 Hours" class="img-fluid w-100 figure-img" />
+                            <h2 class="figure-heading text-danger text-uppercase">locatinon founder</h2>
+                            <figcaption class="figure-caption">Lorem ipsum dolor sit amet consectetur adipisicing.</figcaption>
+                        </figure>
+                        </div>
+                        <div class="col-md-4">
+                            <figure class="figure">
+                                <img src="images/img2.jpg" alt=" A burger with some fries" class="img-fluid w-100 figure-img" />
+                            <h2 class="figure-heading text-danger text-uppercase">Food quality & menu/h2>
+                            <figcaption class="figure-caption">Lorem ipsum dolor sit amet consectetur adipisicing.</figcaption>
+                        </figure>
                     </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="row">
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima soluta at repudiandae tempora accusantium sunt deleniti fugiat ipsum, esse necessitatibus consectetur ipsa assumenda illo. Quam maiores cum vitae voluptatibus ex tempore repellat quae nam! Voluptate officia praesentium qui impedit ullam cum sint.</p>
+                    <div class="col-md-4">
+                        <figure class="figure">
+                            <img src="images/img3.jpg" alt=" Cheif man smiling" class="img-fluid w-100 figure-img" />
+                            <h2 class="figure-heading text-danger text-uppercase">employment</h2>
+                            <figcaption class="figure-caption">Lorem ipsum dolor sit amet consectetur adipisicing.</figcaption>
+                        </figure>
                     </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="row">
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minima soluta at repudiandae tempora accusantium sunt deleniti fugiat ipsum, esse necessitatibus consectetur ipsa assumenda illo. Quam maiores cum vitae voluptatibus ex tempore repellat quae nam! Voluptate officia praesentium qui impedit ullam cum sint.</p>
+                    <div class="col-md-4">
+                        <figure class="figure">
+                            <img src="images/img4.jpg" alt=" fruits and vegatables" class="img-fluid w-100 figure-img" />
+                            <h2 class="figure-heading text-danger text-uppercase">our story</h2>
+                            <figcaption class="figure-caption">Lorem ipsum dolor sit amet consectetur adipisicing.</figcaption>
+                        </figure>
+                    </div>
+                    <div class="col-md-4">
+                        <figure class="figure">
+                            <img src="images/img5.jpg" alt=" lemon lime drink acholol" class="img-fluid w-100 figure-img" />
+                            <h2 class="figure-heading text-danger text-uppercase">promotions</h2>
+                            <figcaption class="figure-caption">Lorem ipsum dolor sit amet consectetur adipisicing.</figcaption>
+                        </figure>
+                    </div>
+                    <div class="col-md-4">
+                        <figure class="figure">
+                            <img src="images/img6.jpg" alt=" 'Egg roll on a clean plate " class="img-fluid w-100 figure-img" />
+                            <h2 class="figure-heading text-danger text-uppercase">locatinon founder</h2>
+                            <figcaption class="figure-caption">Lorem ipsum dolor sit amet consectetur adipisicing.</figcaption>
+                        </figure>
                     </div>
                 </div>
             </div>
         </section>
     </main>
     <!-- footer -->
-    <footer class="footer" id="footer"></footer>
+    <footer class="footer" id="footer">
+        <section class="section" id="footerSection1">
+            <div class="container">
+                <h2 class="fs1-heading">Resetions and orders may be place anytime</h2>
+                <div class="row">
+                    <div class="col-md-4 col-6">
+                        <div class="fs1-parent d-md-flex">
+                            <i class="bi bi-cup-fill"></i>
+                            <div class="fs1-child">
+                                <h3 class="fs1-subheading">
+                                    <span class="small-text d-block">offer one</span>
+                                    Lorem, ipsum dolor.
+                                </h3>
+                                <p class="fs1-txt">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore possimus nesciunt nam nemo aspernatur obcaecati repellat quo corporis autem illum praesentium perferendis asperiores est ratione totam vero qui officiis, accusamus inventore quas deleniti dignissimos laborum!</p>
+                                <a href="#" class="fs1-link text-danger">&gt;&gt; Click here</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-6">
+                        <div class="fs1-parent d-md-flex">
+                            <i class="bi bi-egg-fill"></i>
+                            <div class="fs1-child">
+                                <h3 class="fs1-subheading">
+                                    <span class="small-text d-block">offer two</span>
+                                    Lorem, ipsum dolor.
+                                </h3>
+                                <p class="fs1-txt">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore possimus nesciunt nam nemo aspernatur obcaecati repellat quo corporis autem illum praesentium perferendis asperiores est ratione totam vero qui officiis, accusamus inventore quas deleniti dignissimos laborum!</p>
+                                <a href="#" class="fs1-link text-danger">&gt;&gt; Click here</a>
+                            </div>
+                        </div>
+                    </div>
+                        <div class="col-md-4 d-none d-md-block">
+                            <div class="fs1-parent d-md-flex">
+                                <i class="bi bi-heart-fill"></i>
+                                <div class="fs1-child">
+                                    <h3 class="fs1-subheading">
+                                        <span class="small-text d-block">offer three</span>
+                                        Lorem, ipsum dolor.
+                                    </h3>
+                                    <p class="fs1-txt">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore possimus nesciunt nam nemo aspernatur obcaecati repellat quo corporis autem illum praesentium perferendis asperiores est ratione totam vero qui officiis, accusamus inventore quas deleniti dignissimos laborum!</p>
+                                    <a href="#" class="fs1-link text-danger">&gt;&gt; Click here</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
+        <section class="section" id="footerSection2">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <p class="text-center">Client Logo</p>
+                    </div>
+                    <div class="col">
+                        <p class="text-center">Client Logo</p>
+                    </div>
+                    <div class="col d-none d-md-block">
+                        <p class="text-center">Client Logo</p>
+                    </div>
+                    <div class="col d-none d-md-block">
+                        <p class="text-center">Client Logo</p>
+                    </div>
+                    <div class="col d-none d-md-block">
+                        <p class="text-center">Client Logo</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section" id="footerSection3"></section>
+        <section class="section" id="footerSection4"></section>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
