--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4">
-                        <h1 class="heading text-capitalize text-center text-md-start">restaurante</h1>
+                        <h1 class="heading text-capitalize text-center text-md-start text-light">restaurante</h1>
                     </div>
                     <div class="col-lg-8">
                         <div class="drop-down-div d-lg-none">
-                            <div class="dropdown text-center text-sm-end">
+                            <div class="dropdown text-center text-sm-end ">
                                 <button
                                     class="btn dropdown-btn dropdown-toggle"
                                     type="button"
@@ -92,9 +92,9 @@
         </section>
         <section class="section" id="headerSection3">
             <div class="container">
-                <div class="row">
+                <div class="row gy-3">
                     <div class="col-md-3">
-                        <p class="blurb text-center text-md-start">Top quality ingredients only in our kitchen!</p>
+                        <p class="blurb text-center text-md-start fs3-italic my-figure">Top quality ingredients only in our kitchen!</p>
                     </div>
                     <div class="col-md-3 offset-md-6">
                         <form action="#" class="form seaech-from">
@@ -129,43 +129,43 @@
                         <button
                             type="button"
                             data-bs-target="#myCarousel"
-                            data-bs-slide-to="0"
-                            aria-label="slide 1">
-                        </button>
-                        <button
-                            type="button"
-                            data-bs-target="#myCarousel"
-                            data-bs-slide-to="1"
+                            data-bs-slide-to="2"
                             aria-label="slide 2">
                         </button>
                         <button
                             type="button"
                             data-bs-target="#myCarousel"
-                            data-bs-slide-to="2"
+                            data-bs-slide-to="3"
                             aria-label="slide 3">
                         </button>
                         <button
                             type="button"
                             data-bs-target="#myCarousel"
-                            data-bs-slide-to="3"
+                            data-bs-slide-to="4"
                             aria-label="slide 4">
+                        </button>
+                        <button
+                            type="button"
+                            data-bs-target="#myCarousel"
+                            data-bs-slide-to="5"
+                            aria-label="slide 5">
                         </button>
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="https://via.placeholder.com/50x50"alt="placeholder img" class="img-fluid image d-block w-100" />
+                            <img src="images/abhishek-hajare-_3dTLrMwiW8-unsplash.jpg"alt="placeholder img" class="img-fluid image d-block w-100 carousel-image" />
                         </div>
                         <div class="carousel-item">
-                            <img src="https://via.placeholder.com/50x50"alt="placeholder img" class="img-fluid image d-block w-100" />
+                            <img src="images/amirali-mirhashemian-XtLPfib7OuM-unsplash.jpg"alt="placeholder img" class="img-fluid image d-block w-100  carousel-image" />
                         </div>
                         <div class="carousel-item">
-                            <img src="https://via.placeholder.com/50x50"alt="placeholder img" class="img-fluid image d-block w-100" />
+                            <img src="images/douglas-lopez-uOooiTi5hYk-unsplash.jpg"alt="placeholder img" class="img-fluid image d-block w-100 carousel-image" />
                         </div>
                         <div class="carousel-item">
-                            <img src="https://via.placeholder.com/50x50"alt="placeholder img" class="img-fluid image d-block w-100" />
+                            <img src="images/janesca-DBVviVJLWic-unsplash.jpg"alt="placeholder img" class="img-fluid image d-block w-100 carousel-image" />
                         </div>
                         <div class="carousel-item">
-                            <img src="https://via.placeholder.com/50x50"alt="placeholder img" class="img-fluid image d-block w-100" />
+                            <img src="images/yosuke-ota-UCOtabe3l7E-unsplash.jpg"alt="placeholder img" class="img-fluid image d-block w-100 carousel-image" />
                         </div>
                     </div>
                     <button
@@ -193,45 +193,45 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
-                        <figure class="figure">
+                        <figure class="figure my-figure">
                             <img src="images/img1.jpg" alt=" A neon sign reading 'Open 24 Hours" class="img-fluid w-100 figure-img" />
-                            <h2 class="figure-heading text-danger text-uppercase">locatinon founder</h2>
-                            <figcaption class="figure-caption">Lorem ipsum dolor sit amet consectetur adipisicing.</figcaption>
+                            <h2 class="figure-heading text-danger text-uppercase ps-4">locatinon founder</h2>
+                            <figcaption class="figure-caption ps-4">Lorem ipsum dolor sit amet consectetur adipisicing.</figcaption>
                         </figure>
                         </div>
                         <div class="col-md-4">
-                            <figure class="figure">
+                            <figure class="figure my-figure">
                                 <img src="images/img2.jpg" alt=" A burger with some fries" class="img-fluid w-100 figure-img" />
-                            <h2 class="figure-heading text-danger text-uppercase">Food quality & menu/h2>
-                            <figcaption class="figure-caption">Lorem ipsum dolor sit amet consectetur adipisicing.</figcaption>
+                            <h2 class="figure-heading text-danger text-uppercase ps-4">Food quality&menu</h2>
+                                <figcaption class="figure-caption ps-4">Lorem ipsum dolor sit amet consectetur adipisicing.</figcaption>
+                            </figure>
+                    </div>
+                    <div class="col-md-4">
+                        <figure class="figure my-figure">
+                            <img src="images/img3.jpg" alt=" Chief man smiling" class="img-fluid w-100 figure-img" />
+                            <h2 class="figure-heading text-danger text-uppercase ps-4">employment</h2>
+                            <figcaption class="figure-caption ps-4">Lorem ipsum dolor sit amet consectetur adipisicing.</figcaption>
                         </figure>
                     </div>
                     <div class="col-md-4">
-                        <figure class="figure">
-                            <img src="images/img3.jpg" alt=" Cheif man smiling" class="img-fluid w-100 figure-img" />
-                            <h2 class="figure-heading text-danger text-uppercase">employment</h2>
-                            <figcaption class="figure-caption">Lorem ipsum dolor sit amet consectetur adipisicing.</figcaption>
-                        </figure>
-                    </div>
-                    <div class="col-md-4">
-                        <figure class="figure">
+                        <figure class="figure my-figure">
                             <img src="images/img4.jpg" alt=" fruits and vegatables" class="img-fluid w-100 figure-img" />
-                            <h2 class="figure-heading text-danger text-uppercase">our story</h2>
-                            <figcaption class="figure-caption">Lorem ipsum dolor sit amet consectetur adipisicing.</figcaption>
+                            <h2 class="figure-heading text-danger text-uppercase ps-4">our story</h2>
+                            <figcaption class="figure-caption ps-4">Lorem ipsum dolor sit amet consectetur adipisicing.</figcaption>
                         </figure>
                     </div>
                     <div class="col-md-4">
-                        <figure class="figure">
+                        <figure class="figure my-figure">
                             <img src="images/img5.jpg" alt=" lemon lime drink acholol" class="img-fluid w-100 figure-img" />
-                            <h2 class="figure-heading text-danger text-uppercase">promotions</h2>
-                            <figcaption class="figure-caption">Lorem ipsum dolor sit amet consectetur adipisicing.</figcaption>
+                            <h2 class="figure-heading text-danger text-uppercase ps-4">promotions</h2>
+                            <figcaption class="figure-caption ps-4">Lorem ipsum dolor sit amet consectetur adipisicing.</figcaption>
                         </figure>
                     </div>
                     <div class="col-md-4">
-                        <figure class="figure">
+                        <figure class="figure my-figure">
                             <img src="images/img6.jpg" alt=" 'Egg roll on a clean plate " class="img-fluid w-100 figure-img" />
-                            <h2 class="figure-heading text-danger text-uppercase">locatinon founder</h2>
-                            <figcaption class="figure-caption">Lorem ipsum dolor sit amet consectetur adipisicing.</figcaption>
+                            <h2 class="figure-heading text-danger text-uppercase ps-4">locatinon founder</h2>
+                            <figcaption class="figure-caption ps-4">Lorem ipsum dolor sit amet consectetur adipisicing.</figcaption>
                         </figure>
                     </div>
                 </div>
@@ -242,40 +242,46 @@
     <footer class="footer" id="footer">
         <section class="section" id="footerSection1">
             <div class="container">
-                <h2 class="fs1-heading">Resetions and orders may be place anytime</h2>
+                <h2 class="fs1-heading fst-italic fw-light">Resetions and orders may be place anytime</h2>
                 <div class="row">
                     <div class="col-md-4 col-6">
-                        <div class="fs1-parent d-md-flex">
-                            <i class="bi bi-cup-fill"></i>
-                            <div class="fs1-child">
+                        <div class="row">
+                            <div class="col-sm-1">
+                                <i class="bi bi-cup-fill icons"></i>
+                            </div>
+                            <div class="col-sm-11">
                                 <h3 class="fs1-subheading">
-                                    <span class="small-text d-block">offer one</span>
+                                    <span class="small-text d-block text-uppercase">offer one</span>
                                     Lorem, ipsum dolor.
                                 </h3>
                                 <p class="fs1-txt">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore possimus nesciunt nam nemo aspernatur obcaecati repellat quo corporis autem illum praesentium perferendis asperiores est ratione totam vero qui officiis, accusamus inventore quas deleniti dignissimos laborum!</p>
-                                <a href="#" class="fs1-link text-danger">&gt;&gt; Click here</a>
-                            </div>
-                        </div>
+                                <a href="#" class="fs1-link text-danger text-decoration-none">&gt;&gt; Click here</a>
+                    </div>
+                </div>
                     </div>
                     <div class="col-md-4 col-6">
-                        <div class="fs1-parent d-md-flex">
-                            <i class="bi bi-egg-fill"></i>
-                            <div class="fs1-child">
+                        <div class="row">
+                            <div class="col-sm-1">
+                                <i class="bi bi-egg-fill icons"></i>
+                            </div>
+                            <div class="col-sm-11">
                                 <h3 class="fs1-subheading">
-                                    <span class="small-text d-block">offer two</span>
+                                    <span class="small-text d-block text-uppercase">offer two</span>
                                     Lorem, ipsum dolor.
                                 </h3>
                                 <p class="fs1-txt">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore possimus nesciunt nam nemo aspernatur obcaecati repellat quo corporis autem illum praesentium perferendis asperiores est ratione totam vero qui officiis, accusamus inventore quas deleniti dignissimos laborum!</p>
-                                <a href="#" class="fs1-link text-danger">&gt;&gt; Click here</a>
+                                <a href="#" class="fs1-link text-danger text-decoration-none">&gt;&gt; Click here</a>
                             </div>
                         </div>
                     </div>
                         <div class="col-md-4 d-none d-md-block">
-                            <div class="fs1-parent d-md-flex">
-                                <i class="bi bi-heart-fill"></i>
-                                <div class="fs1-child">
+                            <div class="row">
+                                <div class="col-sm-1">
+                                    <i class="bi bi-heart-fill icons"></i>
+                                </div>
+                                <div class="col-sm-11">
                                     <h3 class="fs1-subheading">
-                                        <span class="small-text d-block">offer three</span>
+                                        <span class="small-text d-block text-uppercase">offer three</span>
                                         Lorem, ipsum dolor.
                                     </h3>
                                     <p class="fs1-txt">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore possimus nesciunt nam nemo aspernatur obcaecati repellat quo corporis autem illum praesentium perferendis asperiores est ratione totam vero qui officiis, accusamus inventore quas deleniti dignissimos laborum!</p>
@@ -283,32 +289,69 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
                 </div>
         </section>
         <section class="section" id="footerSection2">
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <p class="text-center">Client Logo</p>
+                        <p class="text-center" id="client1">Client Logo</p>
                     </div>
                     <div class="col">
-                        <p class="text-center">Client Logo</p>
+                        <p class="text-center" id="client2">Client Logo</p>
                     </div>
                     <div class="col d-none d-md-block">
-                        <p class="text-center">Client Logo</p>
+                        <p class="text-center" id="client3">Client Logo</p>
                     </div>
                     <div class="col d-none d-md-block">
-                        <p class="text-center">Client Logo</p>
+                        <p class="text-center" id="client4">Client Logo</p>
                     </div>
                     <div class="col d-none d-md-block">
-                        <p class="text-center">Client Logo</p>
+                        <p class="text-center" id="client5">Client Logo</p>
                     </div>
                 </div>
             </div>
         </section>
-        <section class="section" id="footerSection3"></section>
-        <section class="section" id="footerSection4"></section>
+        <section class="section" id="footerSection3">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3">
+                        <h2 class="text-uppercase fs3-heading text-light">about us</h2>
+                        <p class="fs3-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ab reiciendis explicabo laboriosam.</p>
+                        <p class="fs3-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic fugiat necessitatibus sequi animi blanditiis sapiente aliquid odio ducimus consectetur quasi cumque, provident, officia repellat dolores.</p>
+                        <a href="#" class="fs3-link text-light">&gt;&gt;Read more</a>
+                    </div>
+                    <div class="col-md-3">
+                        <h2 class="text-uppercase text-light">our blog</h2>
+                        <ul class="list-unstyled fs3-list fs3-text">
+                            <li><a href="#" class="fs3-link text-light text-decoration-none">Lorem ipsum dolor sit amet consectetur</a> adipisicing elit. Maxime, doloremque perferendis. Quas saepe exercitationem explicabo nobis, officia recusandae ut magnam. Rerum sint aliquam totam hic!</li>
+                            <li><a href="#" class="fs3-link text-light text-decoration-none">Lorem ipsum dolor sit amet consectetur</a> adipisicing elit. Maxime, doloremque perferendis. Quas saepe exercitationem explicabo nobis, officia recusandae ut magnam. Rerum sint aliquam totam hic!</li>
+                        </ul>
+                    </div>
+                    <div class="col-md-3"><h2 class="text-uppercase fs3-heading text-light">our flickr</h2>
+                    </div>
+                    <div class="col-md-3"><h2 class="text-uppercase fs3-heading text-light">get in touch</h2>
+                    <ul class="list-unstyled address fs3-list fs3-text">
+                        <li>B587 Queens Blvd</li>
+                        <li>Queens, NY</li>
+                        <li>Mobiles: 601-777-9311</li>
+                        <li>Telephone: 769-889-5399</li>
+                        <li>Fax: 228-222-2222</li>
+                        <li><a href="raitio:satchergmail.com" class="fs3-link text-decoration-none text-light">Email: satcherigmail.com</a></li>
+                    </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="section" id="footerSection4">
+            <div class="container">
+                <h2 class="footer-logo text-center text-md-start text-capitalize text-light">restaurant</h2>
+                <p class="link text-light">site by<a href="#" class="link text-light"> Tree</a>
+                </p>
+                <p class="text-center text-md-start"><a href="#headerSection1">Back to top</a>
+                </p>
+            </div>
+        </section>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
