--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4">
-                        <h1 class="heading text-capitalize text-center text-md-start text-light">restaurante</h1>
+                        <h1 class="heading text-capitalize text-center text-md-start text-light">
+                            <a href="index.html" class="text-light text-decoration-none"></a>restaurante</h1>
                     </div>
                     <div class="col-lg-8">
                         <div class="drop-down-div d-lg-none">
@@ -79,7 +80,7 @@
                         </div>
                         <!--nav sum-->
                         <nav class="nav d-none d-lg-flex main-nav justify-content-lg-end" id="mainNav">
-                            <a href="#" class="nav-link main-nav-link text-uppercase">about</a>
+                            <a href="about.html" class="nav-link main-nav-link text-uppercase">about</a>
                             <a href="#" class="nav-link main-nav-link text-uppercase">events</a>
                             <a href="#" class="nav-link main-nav-link text-uppercase">menu</a>
                             <a href="#" class="nav-link main-nav-link text-uppercase">gallery</a>
